--- a/bricksy/src/components/Property/PropertyCard.css
+++ b/bricksy/src/components/Property/PropertyCard.css
@@ -70,6 +70,8 @@
   font-size: 18px;
   color: #666;
   transition: 0.3s;
+  width:20px;
+  height: 20px;
   z-index: 3; /* Keep above image */
 }
 .fav-btn.active {
@@ -88,6 +90,8 @@
   font-size: 0.9rem;
   transition: 0.3s;
   z-index: 3; /* Keep above image */
+  height:20px;
+  width:20px;
 }
 .compare-btn.active {
   background-color: grey;
@@ -141,8 +145,9 @@
   width: 100%;
   text-align: center;
   padding: 10px 0;
-  color: #fff;
-  background-color: #111 !important;
+  background-color: white !important;
+  color:black !important;
+  border: 2px black solid !important;
   font-weight: 600;
   border-radius: 6px;
   text-decoration: none;
